--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,8 @@
 
 title: Faouët Informatique
 email: mark@berthelemy.net
-description: >- # this means to ignore newlines until "baseurl:"
-  Support and advice for individuals, associations and companies.
-  Accompagnement et conseil aux particuliers, associations et entreprises.
+description_en: Support and advice for individuals, associations and companies.
+description_fr: Accompagnement et conseil aux particuliers, associations et entreprises.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
