--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ title: Faouët Informatique
 email: mark@berthelemy.net
 description_en: Support and advice for individuals, associations and companies.
 description_fr: Accompagnement et conseil aux particuliers, associations et entreprises.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/faouetinformatique" # the subpath of your site, e.g. /blog
+url: "https://berthelemy.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 theme: minima
