--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ url: "https://berthelemy.github.io" # the base hostname & protocol for your site
 # Build settings
 theme: minima
 
-include: '_pages'
+include: ['_pages']
 
 plugins:
   - jekyll-feed
