--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ defaults:
       path: "_pages"
       type: "pages"
     values:
-      permalink: /:basename/ # make URL of pages in the folder _pages as on the root.
+      permalink: /faouetinformatique/:basename/ # make URL of pages in the folder _pages as on the root.
 
 plugins:
   - jekyll-feed
