--- a/_config.yml
+++ b/_config.yml
@@ -41,6 +41,13 @@ defaults:
 plugins:
   - jekyll-feed
 
+collections_dir: collections
+
+collections:
+  services:
+    output: true
+    permalink: /:collection/:name
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
