--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,8 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Faouët Informatique
-email: mark@berthelemy.net
+email: info@faouetinformatique.fr
+phone: 0033662646657
 description_en: IT support and advice for individuals, associations and companies.
 description_fr: Accompagnement et conseil aux particuliers, associations et entreprises.
 baseurl: "/faouetinformatique" # the subpath of your site, e.g. /blog
