--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@
 
 title: Faouët Informatique
 email: info@faouetinformatique.fr
-phone: 0033662646657
+phone: +33662646657
 description_en: IT support and advice for individuals, associations and companies.
 description_fr: Accompagnement et conseil aux particuliers, associations et entreprises.
 baseurl: "/faouetinformatique" # the subpath of your site, e.g. /blog
