--- a/_data/services.yaml
+++ b/_data/services.yaml
@@ -1,4 +1,4 @@
-- name: IT and Communications Strategy
+- name: Strategy
   url: /services/strategy
   description: Helping you to work efficiently and accurately
   img: office-594132_1280.jpg
