tweak image background

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Faouët Informatique
 email: info@faouetinformatique.fr
 phone: +33662646657
-description_en: Fast, efficient websites for professionals, associations and companies
+description_en: Fast, effective websites for professionals, associations and companies
 baseurl: "/faouetinformatique" # the subpath of your site, e.g. /blog
 url: "https://berthelemy.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
